# oddity

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  setup.py
odditylib/: __init__.py  collections.py  decomp.py  detector.py
src/: lib.rs
src/algos/: gaussian.rs  mod.rs  stl.rs
src/collections/: matrix.rs  mod.rs  timeseries.rs
src/gaussian/: dist.rs  kernels.rs  mod.rs  posterior.rs
