[package]
name = "oddity-engine"
version = "0.1.2"
authors = ["lleyton ariton <lleyton.ariton@gmail.com>"]
edition = "2018"

[lib]
name = "oddity"
crate-type = ["cdylib"]

[dependencies]
rand = "0.6.5"
rand_distr = "0.3.0"
random_choice = "0.3.2"
eq-float = "0.1.0"
quickersort = "3.0.1"
rayon = "1.5.0"
num = "0.3.1"
pyo3 = "0.12.3"
nalgebra = "0.23.1"
ndarray = "0.14.0"
ndarray-linalg = "0.12.1"

[package.metadata.maturin]
requires-python = ">=3.6"
requires-dist = ["numpy>=1.16.6"]
classifier = ["Programming Language :: Python"]
